# rust-sqlite-db-test

./: .gitignore  Cargo.toml  flake.nix  test.db
assets/: flattened-job-sites.json
database/: Cargo.toml
database/src/: data_accessor.rs  data_accessor_new.rs  errors.rs  interface.rs  lib.rs  models.rs  repositories.rs
database/src/interface/: remote_job_data_accessor.rs
database/src/repositories/: remote_jobs.rs
driver/: Cargo.toml
driver/src/: main.rs
scripts/: create_schema.sql
