[package]
name = "sqlite-db-test"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
tokio = { version = "1.41.0", features = ["macros"] }
json-parser = { git = "https://github.com/Tarzan9192/rust-json-parser.git", branch = "main" }
file-manager = { git = "https://github.com/Tarzan9192/rust-file-manager.git", branch = "main" }
database = {path = "../database" }

